# cttdcds

./: configure.ac
libs/esl/: fs_cli.c
libs/esl/src/include/: cc.h
src/: switch_core.c  switch_core_media.c  switch_xml.c
src/include/: switch_core.h  switch_xml.h
src/include/private/: switch_core_pvt.h
src/mod/applications/mod_av/: avcodec.c
src/mod/applications/mod_commands/: mod_commands.c
src/mod/applications/mod_conference/: conference_api.c  conference_member.c  mod_conference.c  mod_conference.h
src/mod/applications/mod_smsctl/: Makefile.am  mod_smsctl.c
src/mod/endpoints/mod_sofia/: mod_sofia.c  sofia.c  sofia_presence.c
